--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,12 @@ jobs:
       - name: Clean
         run: mvn -B clean -DskipTests -DBUILD_NUMBER=${{ github.run_number }}
 
+
       - name: Build
-        run: mvn -B package -DskipTests -DBUILD_NUMBER=${{ github.run_number }}
+        run: |
+          mvn -B package -DskipTests -DBUILD_NUMBER=${{ github.run_number }}
+          ls -la
+          ls -la target/
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -46,4 +50,4 @@ jobs:
             file: Dockerfile
             platforms: linux/amd64
             push: true
-            tags: ${{ secrets.DOCKERHUB_PASSWORD }}/animus:1.0.${{ github.run_number }}
+            tags: saptaktdk123/animus:1.0.${{ github.run_number }}
